# PhysicsSimulator

./: CMakeLists.txt  PhysicsSimulator.slnx
PhysicsSimulator/: PhysicsSimulator.vcxproj  PhysicsSimulator.vcxproj.filters
app/: CMakeLists.txt  main.cpp
apps/: CMakeLists.txt
apps/simulator_app/: CMakeLists.txt  main.cpp
engine/: CMakeLists.txt
engine/include/: CMakeLists.txt
engine/include/engine/core/: simulation.h  world.h
engine/include/engine/math/: vector3.h
engine/include/engine/physics/: integrator.h  rigid_body.h
engine/include/math/: vector3.h
engine/include/physics/constrains/: spring_constrain.h
engine/include/physics/core/: particle.h  physics_world.h
engine/include/physics/forces/: force_generator.h  gravity_force.h  spring_force.h
engine/include/physics/integration/: euler_integrator.h  integrator.h  verlet_integrator.h
engine/include/physics/registry/: force_registry.h
engine/src/core/: simulation.cpp  world.cpp
engine/src/math/: vector3.cpp
engine/src/physics/: integrator.cpp  rigid_body.cpp
engine/src/physics/core/: particle.cpp  physics_world.cpp
engine/src/physics/forces/: gravity_force.cpp  spring_force.cpp
engine/src/physics/integration/: euler_integrator.cpp  verlet_integrator.cpp
engine/src/physics/registry/: force_registry.cpp
lib/: CMakeLists.txt
tests/: CMakeLists.txt  physics_tests.cpp
